--- a/composer.json
+++ b/composer.json
@@ -1,42 +1,22 @@
 {
-  "name": "yiisoft/yii2-app-advanced",
-  "description": "Yii 2 Advanced Project Template",
-  "keywords": ["yii2", "framework", "advanced", "project template"],
-  "homepage": "http://www.yiiframework.com/",
-  "type": "project",
-  "license": "BSD-3-Clause",
-  "support": {
-    "issues": "https://github.com/yiisoft/yii2/issues?state=open",
-    "forum": "http://www.yiiframework.com/forum/",
-    "wiki": "http://www.yiiframework.com/wiki/",
-    "irc": "irc://irc.freenode.net/yii",
-    "source": "https://github.com/yiisoft/yii2"
-  },
-  "minimum-stability": "dev",
-  "require": {
-    "php": ">=5.4.0",
-    "yiisoft/yii2": "~2.0.6",
-    "yiisoft/yii2-bootstrap": "~2.0.0",
-    "yiisoft/yii2-swiftmailer": "~2.0.0"
-  },
-  "require-dev": {
-    "yiisoft/yii2-debug": "~2.0.0",
-    "yiisoft/yii2-gii": "~2.0.0",
-    "yiisoft/yii2-faker": "~2.0.0",
-
-    "codeception/base": "^2.2.3",
-    "codeception/verify": "~0.3.1"
-  },
-  "config": {
-    "process-timeout": 1800
-  },
-  "extra": {
-    "asset-installer-paths": {
-      "npm-asset-library": "vendor/npm",
-      "bower-asset-library": "vendor/bower"
+  "name": "execut/yii2-module-template",
+  "description": "Template for yii2 module",
+  "keywords": ["yii2"],
+  "homepage": "https://github.com/execut/yii2-module-template",
+  "type": "yii2-extension",
+  "license": "Apache-2.0",
+  "authors": [
+    {
+      "name": "eXeCUT"
     }
+  ],
+  "minimum-stability": "stable",
+  "require": {
+    "yiisoft/yii2": "@dev"
   },
-  "scripts": {
-    "post-install-cmd": "php init --env=Development --overwrite=n"
+  "autoload": {
+    "psr-4": {
+      "execut\\moduleTemplate\\": ""
+    }
   }
 }
