--- a/.travis.yml
+++ b/.travis.yml
@@ -12,8 +12,8 @@ before_install: phpenv config-rm xdebug.ini
 # Install packages those will be required during build
 before_script:
   - travis_retry composer self-update
-  - travis_retry composer config minimum-stability dev
   - travis_retry composer install ${COMPOSER_FLAGS} --no-interaction
+  - travis_retry composer show
 
 script:
   - ./vendor/bin/codecept build
@@ -23,6 +23,6 @@ script:
 
 # Cache folder, you can delete cache from Travis CI web interface
 cache:
-    directories:
-        - vendor
-        - $HOME/.composer/cache
+  directories:
+    - vendor
+    - $HOME/.composer/cache
