--- a/tests/unit.suite.yml
+++ b/tests/unit.suite.yml
@@ -1,10 +1,10 @@
 # Codeception Test Suite Configuration
+#
+# Suite for unit (internal) tests.
 
-# suite for unit (internal) tests.
-# RUN `build` COMMAND AFTER ADDING/REMOVING MODULES.
-
+suite_namespace: execut\moduleTemplate\tests\unit
 class_name: CodeGuy
 modules:
-    enabled: # [execut\CodeHelper]
-      - Yii2:
-          configFile: tests/configs/main.php
+  enabled:
+    - Yii2:
+        configFile: tests/configs/main.php
